--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 
-:root {
-    color-scheme: dark;
-}
 
 body {
     font-family: 'Rubik', sans-serif;
+    background-color: #F5EEDD;
+    /* This is where you set the background color */
+    /* You might also want to set height to ensure the background covers the whole viewport */
+    min-height: 100vh;
+    margin: 0;
+    /* Remove default body margin */
+    padding: 0;
+    /* Remove default body padding */
 }
